--- a/PROYECTO SEMESTRAL/principal.html
+++ b/PROYECTO SEMESTRAL/principal.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <ul>
+        <li><a class="active" href="parte1.html">Inicio</a></li>
+        <li><a href="gatos.html">Gatos</a></li>
+        <li><a href="perros.html">Perros</a></li>
+
+      </ul>
 </body>
 </html>
