--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -5,19 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="CSS/cambios.css"/>
-
-
 </head>
-<body class="fondo">
-    <ul>
-        <li><a class="active" href="Pantalla.html">Inicio</a></li>
-        <li><a href="xbox.html">XBOX</a></li>
-        <li><a href="playstation.html">PLAYSTATION</a></li>
-        <li><a href="nintendo.html">NINTENDO</a></li>
-        <li><a href="pc.html">PC</a></li>
-    </ul>
-    <h2>GAME </h2>
-    <H2>TOPIA </H2>      
+<body>
+    <div class="container" class="fondo">
+        <ul>
+            <li><a class="active" href="Pantalla.html">Inicio</a></li>
+            <li><a href="xbox.html">XBOX</a></li>
+            <li><a href="playstation.html">PLAYSTATION</a></li>
+            <li><a href="nintendo.html">NINTENDO</a></li>
+            <li><a href="pc.html">PC</a></li>
+        </ul>
+        <h2>GAME </h2>
+        <H2>TOPIA </H2> 
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" 
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" 
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
+        crossorigin="anonymous"></script>
+</body>   
 </body>
 </html>
+
