--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -7,13 +7,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="CSS/cambios.css"/>
+    <link type="text/css" rel="stylesheet" href="/PROYECTO SEMESTRAL/CSS/cambios.css"/>
 </head>
 <body>
     <div class="container">
 
         
-
+        <ul>
+            <li><a class="active" href="Pantalla.html">Inicio</a></li>
+            <li><a href="xbox.html">XBOX</a></li>
+            <li><a href="playstation.html">PLAYSTATION</a></li>
+            <li><a href="nintendo.html">NINTENDO</a></li>
+            <li><a href="pc.html">PC</a></li>
+        </ul>
+        <h2>GAME </h2>
+        <H2>TOPIA </H2> 
 
 
 
