--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -7,16 +7,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="CSS/cambios.css"/>
+    <link type="text/css" rel="stylesheet" href="/PROYECTO SEMESTRAL/CSS/cambios.css"/>
 </head>
 <body>
     <div class="container">
         <ul>
-            <li><a class="active" href="parte1.html">Inicio</a></li>
-            <li><a href="gatos.html">Gatos</a></li>
-            <li><a href="perros.html">Perros</a></li>
+            <li><a class="active" href="Pantalla.html">Inicio</a></li>
+            <li><a href="xbox.html">XBOX</a></li>
+            <li><a href="playstation.html">PLAYSTATION</a></li>
+            <li><a href="nintendo.html">NINTENDO</a></li>
+            <li><a href="pc.html">PC</a></li>
+        </ul>
+        <h2>GAME </h2>
+        <H2>TOPIA </H2> 
+
         
-          </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
