--- a/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="/PROYECTO SEMESTRAL/CSS/cambios.css"/>
+    <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
 </head>
 <body>
     <div class="container">
