--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -7,19 +7,50 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="/PROYECTO SEMESTRAL/CSS/cambios.css"/>
+    <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
 </head>
-<body>
+<body class="">
     <div class="container">
-        <ul>
-            <li><a class="active" href="Pantalla.html">Inicio</a></li>
-            <li><a href="xbox.html">XBOX</a></li>
-            <li><a href="playstation.html">PLAYSTATION</a></li>
-            <li><a href="nintendo.html">NINTENDO</a></li>
-            <li><a href="pc.html">PC</a></li>
-        </ul>
-        <h2>GAME </h2>
-        <H2>TOPIA </H2> 
+        <div class="row">
+            <div class="col-md-12">
+                <ul>
+                    <li><a class="active" href="Pantalla.html">Inicio</a></li>
+                    <li><a href="xbox.html">XBOX</a></li>
+                    <li><a href="playstation.html">PLAYSTATION</a></li>
+                    <li><a href="nintendo.html">NINTENDO</a></li>
+                    <li><a href="pc.html">PC</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row centrar">
+            <div class="col-md-12 "><h1>EXCLUSIVOS DE XBOX</h1></div>
+        </div>
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen"><br>DEAD RISING</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/DESTINY.jpg" alt="sin imagen"><br>DESTINY</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/GEARS OF WAR 3.jpg" alt="sin imagen" ><br>GEARS OF WAR 3</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/HALO INFINITE.jpg" alt="sin imagen"><br>HALO INFINITE</div>
+        </div>   
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/XBOX/LEFT 4 DEAD.jfif" alt="sin imagen"><br>LEFT 4 DEAD </div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/GEARS OF WAR 4.jpg" alt="sin imagen"><br>GEARS OF WAR 4</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/MINECRAFT.jpg" alt="sin imagen"><br>MINECRAFT</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/gears5.jfif" alt="sin imagen"><br>GEARS 5</div>
+        </div> 
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen"><br>A PLAGUE TALE </div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/forza motorsport.jpeg" alt="sin imagen"><br>FORZA MOTORSPORT 5 </div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/HADES.jpeg" alt="sin imagen"><br>HADES</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/HELLBLADE.jpeg" alt="sin imagen"><br>HELLBLADE</div>
+        </div>
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/XBOX/PROTOTYPE.jpeg" alt="sin imagen"><br>PROTOTYPE </div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/PAYDAY 2.jpeg" alt="sin imagen"><br>PAYDAY 2</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/NO MANS SKY.jpeg" alt="sin imagen"><br>NO MANS SKY</div>
+            <div class="col-md-3"><img class="img" src="../img/XBOX/MORTAL KOMBAL 11.jpeg" alt="sin imagen"><br>MORTAL KOMBAT 11</div>
+        </div>  
+    </div> 
+        
 
         
     </div>
