PAGINA DE PLAY LISTA

--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -12,16 +12,44 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-1">
+            <div class="col-md-12">
                 <ul>
-                    <li><a class="active" href="Pantalla.html">Inicio</a></li>
-                    <li><a href="xbox.html">XBOX</a></li>
-                    <li><a href="playstation.html">PLAYSTATION</a></li>
-                    <li><a href="nintendo.html">NINTENDO</a></li>
-                    <li><a href="pc.html">PC</a></li>
+                    <li><a class="active" href="../Pantalla.html">Inicio</a></li>
+                    <li><a href="../Exclusivo Xbox/xbox.html">XBOX</a></li>
+                    <li><a href="../Exclusivo Play/playstation.html">PLAYSTATION</a></li>
+                    <li><a href="../Exclusivo Nintendo/nintendo.html">NINTENDO</a></li>
+                    <li><a href="../Exclusivo PC/pc.html">PC</a></li>
                 </ul>
             </div>
         </div>
+        <div class="row centrar">
+            <div class="col-md-12"><h1>EXCLUSIVOS DE PLAYSTATION</h1></div>
+        </div>
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br>BATMAN ARKHAM KNIGHT</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br>BOIMUTANT</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen" ><br>CHRONOS BEFORE THE ASHES</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><br>DEMOS'N SOULS</div>
+        </div>
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/detroit become human.jpeg" alt="sin imagen"><br>DETROIT BECOME HUMAN</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><br>GHOST OF TSUSHIMA</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" alt="sin imagen" ><br>GOD OF WAR RAGNAROK</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><br>HALO INFINITE</div>
+        </div> 
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><br>DEAD RISING</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"><br>DESTINY</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen" ><br>GEARS OF WAR 3</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><br>HALO INFINITE</div>
+        </div> 
+        <div class="row">
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/spiderman.jpeg" alt="sin imagen"><br>DEAD RISING</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen"><br>DESTINY</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen" ><br>GEARS OF WAR 3</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><br>HALO INFINITE</div>
+        </div>   
+
 
 
 
