--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -11,13 +11,17 @@
 </head>
 <body>
     <div class="container" class="fondo">
-        <ul>
-            <li><a class="active" href="Pantalla.html">Inicio</a></li>
-            <li><a href="xbox.html">XBOX</a></li>
-            <li><a href="playstation.html">PLAYSTATION</a></li>
-            <li><a href="nintendo.html">NINTENDO</a></li>
-            <li><a href="pc.html">PC</a></li>
-        </ul>
+        <div class="row">
+            <div class="col-md-12">
+                <ul>
+                    <li><a class="active" href="Pantalla.html">Inicio</a></li>
+                    <li><a href="Exclusivo Xbox/xbox.html">XBOX</a></li>
+                    <li><a href="Exclusivo Play/playstation.html">PLAYSTATION</a></li>
+                    <li><a href="Exclusivo Nintendo/nintendo.html">NINTENDO</a></li>
+                    <li><a href="Exclusivo PC/pc.html">PC</a></li>
+                </ul>
+            </div>
+        
         <h2>GAME </h2>
         <H2>TOPIA </H2> 
     </div>
