--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/nintendo.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/nintendo.html
@@ -11,6 +11,17 @@
 </head>
 <body>
     <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <ul>
+                    <li><a class="active" href="../Pantalla.html">Inicio</a></li>
+                    <li><a href="../Exclusivo Xbox/xbox.html">XBOX</a></li>
+                    <li><a href="../Exclusivo Play/playstation.html">PLAYSTATION</a></li>
+                    <li><a href="../Exclusivo Nintendo/nintendo.html">NINTENDO</a></li>
+                    <li><a href="../Exclusivo PC/pc.html">PC</a></li>
+                </ul>
+            </div>
+        </div>
 
         
 
