--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -14,11 +14,11 @@
         <div class="row">
             <div class="col-md-12">
                 <ul>
-                    <li><a class="active" href="Pantalla.html">Inicio</a></li>
-                    <li><a href="xbox.html">XBOX</a></li>
-                    <li><a href="playstation.html">PLAYSTATION</a></li>
-                    <li><a href="nintendo.html">NINTENDO</a></li>
-                    <li><a href="pc.html">PC</a></li>
+                    <li><a class="active" href="../Pantalla.html">Inicio</a></li>
+                    <li><a href="../Exclusivo Xbox/xbox.html">XBOX</a></li>
+                    <li><a href="../Exclusivo Play/playstation.html">PLAYSTATION</a></li>
+                    <li><a href="../Exclusivo Nintendo/nintendo.html">NINTENDO</a></li>
+                    <li><a href="../Exclusivo PC/pc.html">PC</a></li>
                 </ul>
             </div>
         </div>
