--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -9,7 +9,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
 </head>
-<body>
+<body class="fondoP">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -22,9 +22,12 @@
                 </ul>
             </div>
         </div>
+        <br>
         <div class="row centrar">
             <div class="col-md-12"><h1>EXCLUSIVOS DE PLAYSTATION</h1></div>
         </div>
+        <br>
+        <br>
         <div class="row">
             <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br>BATMAN ARKHAM KNIGHT</div>
             <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br>BOIMUTANT</div>
