--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -9,7 +9,7 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
 </head>
-<body class="">
+<body class="fondoX">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
