--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -24,33 +24,33 @@
         </div>
         <br>
         <div class="row centrar">
-            <div class="col-md-12"><h1>EXCLUSIVOS DE PLAYSTATION</h1></div>
+            <div class="col-md-12"><h1 class="letrap">EXCLUSIVOS DE PLAYSTATION</h1></div>
         </div>
         <br>
         <br>
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br>BATMAN ARKHAM KNIGHT</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br>BOIMUTANT</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen" ><br>CHRONOS BEFORE THE ASHES</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><br>DEMOS'N SOULS</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br><p class="letrap">BATMAN ARKHAM KNIGHT</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br><p class="letrap">BIOMUTANT</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen" ><br><p class="letrap">CHRONOS BEFORE THE ASHES</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><br><p class="letrap">DEMOS'N SOULS</p></div>
         </div>
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/detroit become human.jpeg" alt="sin imagen"><br>DETROIT BECOME HUMAN</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><br>GHOST OF TSUSHIMA</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" alt="sin imagen" ><br>GOD OF WAR RAGNAROK</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><br>HALO INFINITE</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/detroit become human.jpeg" alt="sin imagen"><br><p class="letrap">DETROIT BECOME HUMAN</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><br><p class="letrap">GHOST OF TSUSHIMA</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" alt="sin imagen" ><br><p class="letrap">GOD OF WAR RAGNAROK</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><br><p class="letrap"> GOD OF WAR</p> </div>
         </div> 
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><br>DEAD RISING</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"><br>DESTINY</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen" ><br>GEARS OF WAR 3</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><br>HALO INFINITE</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><br><p class="letrap">HORIZON FORBIDES WEST</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"><br><P class="letrap">HORIZON ZERO DAWN</P></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen" ><br><p class="letrap">KINGDOMS OF AMALUR</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><br><p class="letrap">MAFIA II</p></div>
         </div> 
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/spiderman.jpeg" alt="sin imagen"><br>DEAD RISING</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen"><br>DESTINY</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen" ><br>GEARS OF WAR 3</div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><br>HALO INFINITE</div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/spiderman.jpeg" alt="sin imagen"><br><p class="letrap">SPIDERMAN</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen"><br><p class="letrap">THE LAST OF AS PART II</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen" ><br><p class="letrap">THE SURGE 2</p></div>
+            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><br><p class="letrap">ZOMBIE DRIVER</p></div>
         </div>   
 
 
