--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -25,33 +25,35 @@
         <br>
         <div class="row centrar">
             <div class="col-md-12"><h1 class="letrap">EXCLUSIVOS DE PLAYSTATION</h1></div>
-        </div>
-        <br>
-        <br>
+        </div><br><br>
+        
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br><p class="letrap">BATMAN ARKHAM KNIGHT</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br><p class="letrap">BIOMUTANT</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen" ><br><p class="letrap">CHRONOS BEFORE THE ASHES</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><br><p class="letrap">DEMOS'N SOULS</p></div>
-        </div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br><p class="letrap">BATMAN ARKHAM KNIGHT</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br><p class="letrap">BIOMUTANT</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen" ><br><p class="letrap">CHRONOS BEFORE THE ASHES</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><br><p class="letrap">DEMOS'N SOULS</p></div>
+        </div><br><br>
+
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/detroit become human.jpeg" alt="sin imagen"><br><p class="letrap">DETROIT BECOME HUMAN</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><br><p class="letrap">GHOST OF TSUSHIMA</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" alt="sin imagen" ><br><p class="letrap">GOD OF WAR RAGNAROK</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><br><p class="letrap"> GOD OF WAR</p> </div>
-        </div> 
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/detroit become human.jpeg" alt="sin imagen"><br><p class="letrap">DETROIT BECOME HUMAN</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><br><p class="letrap">GHOST OF TSUSHIMA</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" width="300" height="250" alt="sin imagen" ><br><p class="letrap">GOD OF WAR RAGNAROK</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><br><p class="letrap"> GOD OF WAR</p> </div>
+        </div><br><br>
+
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><br><p class="letrap">HORIZON FORBIDES WEST</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"><br><P class="letrap">HORIZON ZERO DAWN</P></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen" ><br><p class="letrap">KINGDOMS OF AMALUR</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><br><p class="letrap">MAFIA II</p></div>
-        </div> 
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><br><p class="letrap">HORIZON FORBIDES WEST</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"><br><P class="letrap">HORIZON ZERO DAWN</P></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen" ><br><p class="letrap">KINGDOMS OF AMALUR</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><br><p class="letrap">MAFIA II</p></div>
+        </div><br><br> 
+        
         <div class="row">
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/spiderman.jpeg" alt="sin imagen"><br><p class="letrap">SPIDERMAN</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen"><br><p class="letrap">THE LAST OF AS PART II</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen" ><br><p class="letrap">THE SURGE 2</p></div>
-            <div class="col-md-3"><img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><br><p class="letrap">ZOMBIE DRIVER</p></div>
-        </div>   
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/spiderman.jpeg" alt="sin imagen"><br><p class="letrap">SPIDERMAN</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen"><br><p class="letrap">THE LAST OF US</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen" ><br><p class="letrap">THE SURGE 2</p> </div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><br><p class="letrap">ZOMBIE DRIVER</p></div>
+        </div><br><br>  
 
 
 
