--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="../CSS/cambios.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap" rel="stylesheet">
 </head>
 <body class="fondoP">
     <div class="container">
@@ -24,14 +30,14 @@
         </div>
         <br>
         <div class="row centrar">
-            <div class="col-md-12"><h1 class="letrap">EXCLUSIVOS DE PLAYSTATION</h1></div>
+            <div class="col-md-12"><h1 class="letraT">EXCLUSIVOS DE PLAYSTATION</h1></div>
         </div><br><br>
         
         <div class="row">
             <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br><p class="letrap">BATMAN ARKHAM KNIGHT</p></div>
             <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br><p class="letrap">BIOMUTANT</p></div>
             <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen" ><br><p class="letrap">CHRONOS BEFORE THE ASHES</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen"><br><p class="letrap">DEMOS'N SOULS</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" width="300" height="250"  alt="sin imagen"><br><p class="letrap">DEMOS'N SOULS</p></div>
         </div><br><br>
 
         <div class="row">
