--- a/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
@@ -44,7 +44,7 @@
             <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/team forest.jpg" width="300" height="270" alt="sin imagen"><br><p class="letraPC">TEAM FOREST</p></div>
             <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/paladins.jpg" alt="sin imagen"><br><p class="letraPC">PALADINS</p></div>
             <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Crusader Kings III.jpg" alt="sin imagen" ><br><p class="letraPC">CRUSADER KINGS</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Half-Life Alyx.jpg" alt="sin imagen"><br<p class="letraPC">HALF-LIFE ALYX</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Half-Life Alyx.jpg" alt="sin imagen"><br><p class="letraPC">HALF-LIFE ALYX</p></div>
         </div> <br><br>
 
         <div class="row">
