--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/deadrising.html
@@ -14,7 +14,7 @@
         <div class=" row">
             <div class="col-md-12">
                 <ul>
-                    <li><a class="active" href="Pantalla.html">Inicio</a></li>
+                    <li><a class="active" href="../Pantalla.html">Inicio</a></li>
                     <li><a href="../Exclusivo Xbox/xbox.html">XBOX</a></li>
                     <li><a href="../Exclusivo Play/playstation.html">PLAYSTATION</a></li>
                     <li><a href="../Exclusivo Nintendo/nintendo.html">NINTENDO</a></li>
@@ -44,10 +44,8 @@
                 <h2>Trailer</h2><br>
                 <a></a><p>https://www.youtube.com/watch?v=StpzAxIjqZ0</p>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-4">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-
-
             </div>
         </div>
 
