--- a/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html
@@ -24,30 +24,33 @@
         </div>
         <br><br>
         <div class="row">
-           <div class="col-md-4">
-            <img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen">
+           <div class="col-md-4 col-sm-12">
+            <img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen">
            </div> 
-           <div class="col-md-8">
+           <div class="col-md-8 col-sm-12">
             <h2>Descripcion</h2><br>
-            <p>Dead Rising es un videojuego de terror de acción-aventura, mundo abierto desarrollado por Capcom y producido por Keiji Inafune. Fue lanzado el 8 de agosto de 2006 para la consola Xbox 360.  El juego fue un éxito comercial que fue introducido en la línea de Platinum Hits de Xbox 360 y un spin-off para teléfono móvil. La secuela llamada Dead Rising 2 fue desarrollada por Blue Castle Games en conjunto con varios desarrolladores anteriores de Dead Rising y lanzado en septiembre de 2010. La siguiente secuela es DEAD RISING 4 para XBOX ONE. En donde regresa Frank West a Willamette en épocas de Navidad en 2016, en esta entrega no solo está desarrollado en el centro comercial, 
-                si no en todo el pueblo de Willamette dándole la posibilidad de explorar todo el mapa en modo de mundo abierto. La historia de Dead Rising se centra en Frank West, un fotoperiodista quien termina atrapado en un centro comercial en la ficticia ciudad de Willamette, Colorado, que está infestada de zombis.
-            </p>
-            </div>
-        </div>
-        <br><br>
+            <p>Batman: Arkham Knight es un videojuego de acción-aventura y mundo abierto desarrollado por Rocksteady Studios y lanzado por Warner Bros. 
+                Interactive Entertainment para las consolas PlayStation 4, PlayStation 3 y Microsoft Windows.  Basado en el superhéroe de DC Comics Batman, 
+                es el sucesor del videojuego de 2013 Batman: Arkham Origins, y el cuarto juego principal 
+                 en la serie Batman: Arkham .Kevin Conroy interpretó a Batman de nuevo, al igual que Mark Hamill con el Joker. Fue lanzado a nivel mundial el 23 de junio de 2015.
+                 Escrito por Sefton Hill, Ian Ball y Martin Lancaster, transcurre un año después de los acontecimientos del anterior juego, "Batman: Arkham City",
+                publicado en 2011. La trama principal continúa con Batman, en la cúspide de sus habilidades, enfrentándose contra el Espantapájaros,
+                que ha lanzado un ataque contra la ciudad de Gotham
+            </div></div>
+        <br>
         <div class="row">
-            <div class="col-md-4">
-                <H2>Plataformas</H2><br>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+            <div class="col-md-4 col-sm-12"><br>
+                <H2>Plataformas</H2>
+                <p>° PlayStation 4 </p>
+                <P>° PlayStation 3 </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="https://www.youtube.com/watch?v=YzuTDSnfbeU" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png" alt="youtube" class="logoY"></a>
+                <a href="https://www.youtube.com/watch?v=L63rDlpJ3_o" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png" alt="youtube" class="logoY"></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12"><br><br>
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/dead-rising/BZV7W98B3XN4/0001" target="_blank">
-                    <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
+                <p class="centrar " ><a href="https://store.playstation.com/es-cl/product/UP1018-CUSA00133_00-BATMANARKHAMKNHT?gclid=Cj0KCQjwt_qgBhDFARIsABcDjOfOLIopViOAxLGw5ixfwnKsifY-slwBNczpP57PHfdhNGfld0SYGbwaAmpoEALw_wcB&gclsrc=aw.ds" target="_blank">
+                    <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
         </div>
 
@@ -60,6 +63,9 @@
 
 
 
+
+
+        
 
 
 
