--- a/PROYECTO SEMESTRAL/Exclusivo Play/DEMOS'N SOULS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/DEMOS'N SOULS.html
@@ -23,31 +23,38 @@
             </div>
         </div>
         <br><br>
+
         <div class="row">
-           <div class="col-md-4">
-            <img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen">
-           </div> 
-           <div class="col-md-8">
-            <h2>Descripcion</h2><br>
-            <p>Dead Rising es un videojuego de terror de acción-aventura, mundo abierto desarrollado por Capcom y producido por Keiji Inafune. Fue lanzado el 8 de agosto de 2006 para la consola Xbox 360.  El juego fue un éxito comercial que fue introducido en la línea de Platinum Hits de Xbox 360 y un spin-off para teléfono móvil. La secuela llamada Dead Rising 2 fue desarrollada por Blue Castle Games en conjunto con varios desarrolladores anteriores de Dead Rising y lanzado en septiembre de 2010. La siguiente secuela es DEAD RISING 4 para XBOX ONE. En donde regresa Frank West a Willamette en épocas de Navidad en 2016, en esta entrega no solo está desarrollado en el centro comercial, 
-                si no en todo el pueblo de Willamette dándole la posibilidad de explorar todo el mapa en modo de mundo abierto. La historia de Dead Rising se centra en Frank West, un fotoperiodista quien termina atrapado en un centro comercial en la ficticia ciudad de Willamette, Colorado, que está infestada de zombis.
-            </p>
-            </div>
-        </div>
-        <br><br>
+           <div class="col-md-4 col-sm-12">
+            <img class="img" src="../img/PLAYSTATION/demons souls.jpeg" alt="sin imagen">
+           </div>
+           <div class="col-md-8 col-sm-12">
+            <h2 class="centrar">Descripcion</h2><br>
+            <p>Demon's Souls  es un juego de rol de acción de 2009 desarrollado por FromSoftware para PlayStation 3, pero ahora optimizado para PlayStation 5 bajo la supervisión de Japan Studio .
+                 Fue publicado en Japón por Sony Computer Entertainment en febrero, en Norteamérica por Atlus USA en octubre y en los territorios PAL por
+                  Namco Bandai Partners en junio de 2010. El juego se conoce como el sucesor espiritual de la serie King's Field de FromSoftware
+
+                Demon's Souls está ambientado en Boletaria, un reino consumido por un ser oscuro llamado Old One,
+                 luego de su liberación mediante el uso de Soul Arts prohibido. Los jugadores asumen el papel de un héroe traído a
+                  Boletaria para matar a su rey caído Allant y pacificar al Anciano. El juego hace que los jugadores naveguen por cinco mundos 
+                  diferentes desde un centro llamado Nexus, con un gran énfasis en el combate desafiante y la mecánica que rodea la muerte y la reaparición del jugador </p>
+            </div></div>
+
+        <br>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <p>° PlayStation 5 </p>
+                <P>° PlayStation 4 </P>
+                <P>° PlayStation 3 </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="https://www.youtube.com/watch?v=YzuTDSnfbeU" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png" alt="youtube" class="logoY"></a>
+                <a href="https://www.youtube.com/watch?v=2TMs2E6cms4" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/dead-rising/BZV7W98B3XN4/0001" target="_blank">
-                    <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
+                <p class="centrar " ><a href="https://store.playstation.com/es-cl/concept/10000368" target="_blank">
+                    <img src="../img/PLAYSTATION/logoplay.jpg" alt="Juego Play" class="logoY"></a></p>
             </div>
         </div>
 
@@ -56,14 +63,7 @@
 
 
 
-
-
-
-
-
-
-
-
+        
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
