--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -18,7 +18,7 @@
 <body class="fondoP">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12">
                 <ul>
                     <li><a class="active" href="../Pantalla.html">Inicio</a></li>
                     <li><a href="../Exclusivo Xbox/xbox.html">XBOX</a></li>
@@ -34,31 +34,31 @@
         </div><br><br>
         
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/batman arkham knight.jpeg" alt="sin imagen"><br><p class="letrap">BATMAN ARKHAM KNIGHT</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/biomutant.jpeg" alt="sin imagen"><br><p class="letrap">BIOMUTANT</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/chronos before the ashes.jpeg" alt="sin imagen" ><br><p class="letrap">CHRONOS BEFORE THE ASHES</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/demons souls.jpeg" width="300" height="250"  alt="sin imagen"><br><p class="letrap">DEMOS'N SOULS</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html" ><img src="../img/PLAYSTATION/batman arkham knight.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">BATMAN ARKHAM KNIGHT</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/BIOMUTANT.HTML" ><img src="../img/PLAYSTATION/biomutant.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">BIOMUTANT</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/CHRONOS BEFORE THE ASHES.html" ><img src="../img/PLAYSTATION/chronos before the ashes.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">CHRONOS BEFORE THE ASHES</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/DEMOS'N SOULS.html" ><img src="../img/PLAYSTATION/demons souls.jpeg"  alt="sin imagen" class="img" ><br><p class="letrap">DEMOS'N SOULS</p></a></div>
         </div><br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/detroit become human.jpeg" alt="sin imagen"><br><p class="letrap">DETROIT BECOME HUMAN</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/ghost os tsushima.jpeg" alt="sin imagen"><br><p class="letrap">GHOST OF TSUSHIMA</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg" width="300" height="250" alt="sin imagen" ><br><p class="letrap">GOD OF WAR RAGNAROK</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/god of war.jpeg" alt="sin imagen"><br><p class="letrap"> GOD OF WAR</p> </div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/DETROIT BECOME HUMAN.html" ><img src="../img/PLAYSTATION/detroit become human.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">DETROIT BECOME HUMAN</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/GHOST OF TSUSHIMA.html" ><img src="../img/PLAYSTATION/ghost os tsushima.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">GHOST OF TSUSHIMA</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/GOD OF WAR RAGNAROK.html" ><img src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg"  alt="sin imagen" class="img" ><br><p class="letrap">GOD OF WAR RAGNAROK</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/GOD OF WAR.html" ><img src="../img/PLAYSTATION/god of war.jpeg"  alt="sin imagen" class="img"><br><p class="letrap"> GOD OF WAR</p></a></div>
         </div><br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/horizon forbides west.jpeg" alt="sin imagen"><br><p class="letrap">HORIZON FORBIDES WEST</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/horizon zero dawn.jpeg" alt="sin imagen"><br><P class="letrap">HORIZON ZERO DAWN</P></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/kingdoms of amalur.jpeg" alt="sin imagen" ><br><p class="letrap">KINGDOMS OF AMALUR</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/mafia ll.jpeg" alt="sin imagen"><br><p class="letrap">MAFIA II</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/HORIZON FORBIDES WEST.html" ><img src="../img/PLAYSTATION/horizon forbides west.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">HORIZON FORBIDES WEST</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/HORIZON ZERO DAWN.html" ><img src="../img/PLAYSTATION/horizon zero dawn.jpeg"  alt="sin imagen" class="img"><br><P class="letrap">HORIZON ZERO DAWN</P></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/KINGDOMS OF AMALUR.html" ><img src="../img/PLAYSTATION/kingdoms of amalur.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">KINGDOMS OF AMALUR</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/MAFIA II.html" ><img src="../img/PLAYSTATION/mafia ll.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">MAFIA II</p></a></div>
         </div><br><br> 
         
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/spiderman.jpeg" alt="sin imagen"><br><p class="letrap">SPIDERMAN</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/the last of as part ll.jpeg" alt="sin imagen"><br><p class="letrap">THE LAST OF US</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/the surge 2.jpeg" alt="sin imagen" ><br><p class="letrap">THE SURGE 2</p> </div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PLAYSTATION/zombie driver.jpeg" alt="sin imagen"><br><p class="letrap">ZOMBIE DRIVER</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/SPIDERMAN.html" ><img src="../img/PLAYSTATION/spiderman.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">SPIDERMAN</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/THE LAST OF US.html" ><img src="../img/PLAYSTATION/the last of as part ll.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">THE LAST OF US PART II</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/THE SURGE 2.html" ><img src="../img/PLAYSTATION/the surge 2.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">THE SURGE 2</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo Play/ZOMBIE DRIVER.html" ><img src="../img/PLAYSTATION/zombie driver.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">ZOMBIE DRIVER</p></a></div>
         </div><br><br>  
 
 
