--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
@@ -23,30 +23,29 @@
             </div>
         </div>
         <br><br>
+
         <div class="row">
-           <div class="col-md-4">
-            <img class="img" src="../img/XBOX/DEAD RISING.jfif" alt="sin imagen">
-           </div> 
-           <div class="col-md-8">
-            <h2>Descripcion</h2><br>
-            <p>Dead Rising es un videojuego de terror de acción-aventura, mundo abierto desarrollado por Capcom y producido por Keiji Inafune. Fue lanzado el 8 de agosto de 2006 para la consola Xbox 360.  El juego fue un éxito comercial que fue introducido en la línea de Platinum Hits de Xbox 360 y un spin-off para teléfono móvil. La secuela llamada Dead Rising 2 fue desarrollada por Blue Castle Games en conjunto con varios desarrolladores anteriores de Dead Rising y lanzado en septiembre de 2010. La siguiente secuela es DEAD RISING 4 para XBOX ONE. En donde regresa Frank West a Willamette en épocas de Navidad en 2016, en esta entrega no solo está desarrollado en el centro comercial, 
-                si no en todo el pueblo de Willamette dándole la posibilidad de explorar todo el mapa en modo de mundo abierto. La historia de Dead Rising se centra en Frank West, un fotoperiodista quien termina atrapado en un centro comercial en la ficticia ciudad de Willamette, Colorado, que está infestada de zombis.
-            </p>
-            </div>
-        </div>
-        <br><br>
+           <div class="col-md-4 col-sm-12">
+            <img class="img" src="" alt="sin imagen">
+           </div>
+           <div class="col-md-8 col-sm-12">
+            <h2 class="centrar">Descripcion</h2><br>
+            <p> </p>
+            </div></div>
+
+        <br>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p>° XBOX ONE</p>
-                <P>° XBOX 360</P>
+                <p> </p>
+                <P> </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="https://www.youtube.com/watch?v=YzuTDSnfbeU" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png" alt="youtube" class="logoY"></a>
+                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-12">
                 <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/dead-rising/BZV7W98B3XN4/0001" target="_blank">
+                <p class="centrar" ><a href="" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
@@ -56,14 +55,7 @@
 
 
 
-
-
-
-
-
-
-
-
+        
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
