--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -12,7 +12,7 @@
 <body class="fondoPP">
     <div class="container" class="fondo">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12">
                 <ul>
                     <li><a class="active" href="Pantalla.html">Inicio</a></li>
                     <li><a href="Exclusivo Xbox/xbox.html">XBOX</a></li>
