--- a/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
@@ -18,7 +18,7 @@
 <body class="fondoPC">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 col-sm-12">
                 <ul>
                     <li><a class="active" href="../Pantalla.html">Inicio</a></li>
                     <li><a href="../Exclusivo Xbox/xbox.html">XBOX</a></li>
@@ -34,31 +34,31 @@
         </div><br><br>
         
         <div class="row"><br><br>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Black Mesa.jpg" alt="sin imagen"><br><p class="letraPC">BLACK MESA</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/BattleTech.png" width="300" height="260" alt="sin imagen"><br><p class="letraPC">BATTLE TECH</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/counter strike.webp" width="300" height="260" alt="sin imagen" ><br><p class="letraPC">COUNTER STRIKE</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/warface.jpg" alt="sin imagen"><br><p class="letraPC">WARFACE</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/BLACK MESA.html" ><img src="../img/PC/Black Mesa.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">BLACK MESA</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/BATTLE TECH.html" ><img src="../img/PC/BattleTech.png"  alt="sin imagen" class="img"><br><p class="letraPC">BATTLE TECH</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/COUNTER STRIKE.html" ><img src="../img/PC/counter strike.webp"  alt="sin imagen" class="img"><br><p class="letraPC">CS:GO</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/CRUSADER KINGS.html" ><img src="../img/PC/Crusader Kings III.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">CRUSADER KINGS</p></a></div>
         </div><br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/team forest.jpg" width="300" height="270" alt="sin imagen"><br><p class="letraPC">TEAM FOREST</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/paladins.jpg" alt="sin imagen"><br><p class="letraPC">PALADINS</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Crusader Kings III.jpg" alt="sin imagen" ><br><p class="letraPC">CRUSADER KINGS</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Half-Life Alyx.jpg" alt="sin imagen"><br><p class="letraPC">HALF-LIFE ALYX</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/TEAM FOREST.html" ><img src="../img/PC/team forest.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">TEAM FOREST</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/PALADINS.html" ><img src="../img/PC/paladins.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PALADINS</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/WARFACE.html" ><img src="../img/PC/warface.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">WARFACE</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/HALF-LIFE ALYX.html" ><img src="../img/PC/Half-Life Alyx.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">HALF-LIFE ALYX</p></a></div>
         </div> <br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/devour.jpg" alt="sin imagen"><br><p class="letraPC">DEVOUR</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Dota 2.jpg" width="300" height="270" alt="sin imagen"><br><p class="letraPC">DOTA 2</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Escape from Tarkov.jpg" width="300" height="270" alt="sin imagen" ><br><p class="letraPC">ESCAPE FROM TARKOV</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/Europa Universalis IV.jpg" width="300" height="270" alt="sin imagen"><br><p class="letraPC">EUROPA UNIVERSALIS</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/DEVOUR.html" ><img src="../img/PC/devour.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DEVOUR</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/DOTA 2.html" ><img src="../img/PC/Dota 2.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DOTA 2</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/ESCAPE FROM TARKOV.html" ><img src="../img/PC/Escape from Tarkov.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">ESCAPE FROM TARKOV</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/EUROPA UNIVERSALIS.html" ><img src="../img/PC/Europa Universalis IV.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EUROPA UNIVERSALIS</p></a></div>
         </div><br><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/EVE Online.jpg" alt="sin imagen"><br><p class="letraPC">EVE</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/h1z1.jpg" width="300" height="250" alt="sin imagen"><br><p class="letraPC">H1Z1</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/pacify.jpg" width="300" height="250" alt="sin imagen" ><br><p class="letraPC">PACIFY</p></div>
-            <div class="col-md-3 col-sm-6 centrar"><img class="img" src="../img/PC/LEAGUE OF LEGENDS.jpg" alt="sin imagen"><br><p class="letraPC">LEAGUE OF LEGENDS</p></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/EVE.html" ><img src="../img/PC/EVE Online.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EVE</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/H1Z1.html" ><img src="../img/PC/h1z1.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">H1Z1</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/PACIFY.html" ><img src="../img/PC/pacify.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PACIFY</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a href="../Exclusivo PC/LEAGUE OF LEGENDS.html" ><img src="../img/PC/LEAGUE OF LEGENDS.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">LEAGUE OF LEGENDS</p></a></div>
         </div><br><br>
 
         
