--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
@@ -26,26 +26,27 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>En A Plague Tale: Innocence, el jugador toma el control de Amicia de Rune desde una perspectiva en tercera persona, con una jugabilidad centrada en el sigilo y la resolución de puzles.
+                 Durante gran parte del juego, el jugador tiene que ocultarse y evitar encuentros hostiles con los enemigos ya que estos pueden matar a Amicia instantáneamente. Principalmente, Amicia se tiene que enfrentar a soldados de la Inquisición francesa,
+                  pero también soldados ingleses y aldeanos de la región. Amicia está equipada con una honda, con la que puede lanzar piedras para romper cadenas, crear distracciones o aturdir a los enemigos el tiempo suficiente para que hordas de ratas les ataquen. También es posible matar a los enemigos si Amicia lanza una piedra en la cabeza, si esta está desprotegida. </p>
             </div></div>
-
-        <br>
+            <br>
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
-                <P> </P>
+                <p>° XBOX ONE </p>
+                <p>° XBOX SERIES </p>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=gjIb9dQgUF0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
-            <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
+            <div class="col-md-8 col-sm-12">
+                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <p class="centrar" ><a href="https://www.xbox.com/es-cl/games/store/a-plague-tale-innocence/BQ2NNLQPS8RS" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
