--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
@@ -26,26 +26,29 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/XBOX/forza motorsport.jpeg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Forza Motorsport 5 es un salto natural de la saga a la nueva generación, tal y como fue la segunda parte, aparecida en 2007 en Xbox 360. Aprovecha la potencia de Xbox One para mostrarnos unos coches mejor modelados y más espectaculares que nunca,
+                 tanto por dentro como por fuera, y unos escenarios llenos de detalles, además de unos efectos visuales más vistosos. En este sentido, Forza Motorsport es el juego más llamativo de la nueva consola. No tiene esa épica y espectacularidad de Ryse, pero sí un acabado impecable,
+                  con un motor gráfico que se mueve a la perfección, resolución 1080p y 60 fotogramas por segundo para transmitir una gran sensación de velocidad cuando juguemos con la vista en primera persona.
+                 </p>
             </div></div>
 
         <br>
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
-                <P> </P>
+                <p>° XBOX SERIES </p> 
+                <P>° XBOX ONE </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=YLcjfALaQh0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
-            <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
+            <div class="col-md-8 col-sm-12">
+                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <p class="centrar" ><a href="https://www.xbox.com/es-ES/games/store/forza-motorsport-5/bqlk685tm311" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
